Fix header menu alignment on index.html

--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,9 @@ header > div {
     position: relative;
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    align-items: center;
+}
   }
 
   .col-lg-6 {
